--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Assignment Solution for Module 2</title>
-	<link rel="stylesheet" type="text/css" href="module2_assignment.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<h1>Our Menue</h1>
